# Editor-for-OBS

./: CMakeLists.txt  README-en-español.md  README.md  editor-controller.cpp  editor-controller.hpp  editor-dock.cpp  editor-dock.hpp  editor-model.cpp  editor-model.hpp  editor-ui-helpers.cpp  editor-ui-helpers.hpp  editor-widget.cpp  editor-widget.hpp  plugin.cpp  plugin.hpp
data/obs-plugins/E33-Editor/locale/: es-ES.ini  it-IT.ini  ja-JP.ini  ru-RU.ini  zh-CN.ini
data/obs-plugins/E33-Source-Editor/locale/: de-DE.ini  en-US.ini  fr-FR.ini  ko-KR.ini
data/obs-studio/themes/: System.obt  Yami.obt  Yami_Light.ovt
src/filters/: filters-tab.cpp  filters-tab.hpp
src/filters-files/: filters-model.cpp  filters-model.hpp  filters-proper-renderer.cpp  filters-proper-renderer.hpp  filters-renderer.cpp  filters-renderer.hpp  filters-state.cpp  filters-state.hpp  filters-window.cpp  filters-window.hpp
src/misc/: misc-tab.cpp  misc-tab.hpp
src/properties/: properties-tab.cpp  properties-tab.hpp  properties-view.cpp  properties-view.hpp
src/scene-filters/: scene-filters-tab.cpp  scene-filters-tab.hpp
src/source/: audio-settings.cpp  audio-settings.hpp  copy-paste.cpp  copy-paste.hpp  image-settings.cpp  image-settings.hpp  source-color.cpp  source-color.hpp  source-tab.cpp  source-tab.hpp  transitions.cpp  transitions.hpp  video-settings.cpp  video-settings.hpp
src/transform/: alignment.cpp  alignment.hpp  copypaste.cpp  copypaste.hpp  edit-bounds.cpp  edit-bounds.hpp  edit-crop.cpp  edit-crop.hpp  edit-position.cpp  edit-position.hpp  edit.cpp  edit.hpp  quick.cpp  quick.hpp  transform-tab.cpp  transform-tab.hpp
src/widgets/: alignment-grid.cpp  alignment-grid.hpp  box-filters.cpp  box-filters.hpp  box.cpp  box.hpp  filters-header.cpp  filters-header.hpp  header.cpp  header.hpp  information.cpp  information.hpp  separator.cpp  separator.hpp
